unpackaged/objects/TorneioInscricao__c.object
<CustomObject>
    <fields>
        <fullName>DataInscricao__c</fullName>
        <label>Data Inscrição</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Jogador__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Jogador</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Jogador</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Torneio Inscrições</relationshipLabel>
        <relationshipName>Jogadores_Evento</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StatusPlayer__c</fullName>
        <label>Status Player</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jogando</fullName>
                </value>
                <value>
                    <fullName>Classificado</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
                <value>
                    <fullName>Caiu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pré Inscrito</fullName>
                </value>
                <value>
                    <fullName>Inscrito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Torneio_Evento__c</fullName>
        <label>Torneio Evento</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>TorneioEvento__c.Status__c</field>
                <operation>equals</operation>
                <value>Não Iniciado, Em Andamento, Parado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TorneioEvento__c</referenceTo>
        <relationshipLabel>Torneio Inscrições</relationshipLabel>
        <relationshipName>Jogadores_Evento</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Torneio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Torneio</label>
        <referenceTo>Torneio__c</referenceTo>
        <relationshipLabel>Torneio Inscrições</relationshipLabel>
        <relationshipName>Torneio_Inscri_es</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ValorAddOn__c</fullName>
        <label>Valor Add On</label>
        <summarizedField>TorneioCompra__c.Valor__c</summarizedField>
        <summaryFilterItems>
            <field>TorneioCompra__c.Tipo__c</field>
            <operation>equals</operation>
            <value>Add On</value>
        </summaryFilterItems>
        <summaryForeignKey>TorneioCompra__c.TorneioInscricao__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorBuyIn__c</fullName>
        <label>Valor Buy In</label>
        <summarizedField>TorneioCompra__c.Valor__c</summarizedField>
        <summaryFilterItems>
            <field>TorneioCompra__c.Tipo__c</field>
            <operation>equals</operation>
            <value>Buy In</value>
        </summaryFilterItems>
        <summaryForeignKey>TorneioCompra__c.TorneioInscricao__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorRebuy__c</fullName>
        <label>Valor Rebuy</label>
        <summarizedField>TorneioCompra__c.Valor__c</summarizedField>
        <summaryFilterItems>
            <field>TorneioCompra__c.Tipo__c</field>
            <operation>equals</operation>
            <value>Rebuy</value>
        </summaryFilterItems>
        <summaryForeignKey>TorneioCompra__c.TorneioInscricao__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorTotal__c</fullName>
        <label>Valor Total</label>
        <summarizedField>TorneioCompra__c.ValorTotal__c</summarizedField>
        <summaryForeignKey>TorneioCompra__c.TorneioInscricao__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Torneio Inscrição</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Código Inscrição</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Torneio Inscrições</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>